# bellweather-audio-core

./: .clang-format  .clang-format-ignore  .clang-tidy  .dockerignore  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  GOVERNANCE.md  LICENSING.md  MANIFEST.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TESTING.md  THIRD_PARTY_NOTICES.md
modules/: CMakeLists.txt
modules/bw_audio_types/: CMakeLists.txt
modules/bw_audio_types/include/bw_audio_types/: BufferView.h  BwsBiquadFilter.h  BwsLinearSmoothedValue.h  ConstBufferView.h  OwnedAudioBuffer.h  ParamSnapshot.h  ProcessContext.h  RtSmoothedParam.h  TransportState.h
modules/bw_audio_types/tests/: CMakeLists.txt  test_biquad_magnitude.cpp  test_buffer_view.cpp  test_const_buffer_view.cpp  test_param_snapshot.cpp  test_process_context.cpp  test_rt_smoothed_param.cpp  test_transport_state.cpp
modules/bw_core/: CMakeLists.txt
modules/bw_core/include/bw_core/: BwCompilerFeatures.h  BwResult.h  BwToUnderlying.h
modules/bw_core/tests/: CMakeLists.txt  test_bw_result.cpp
modules/bw_dsp_core/: CMakeLists.txt
modules/bw_dsp_core/include/bw_dsp_core/: ChainSpec.h  DspConstants.h  PhaseInverter.h  ThreadMap.h  TptOnePole.h
modules/bw_dsp_core/tests/: CMakeLists.txt  test_dsp_constants.cpp  test_tpt_one_pole.cpp
modules/bw_dsp_metering/: CMakeLists.txt
modules/bw_dsp_metering/include/bw_dsp_metering/: Bs1770Meter.h  EnvelopeFollower.h  LoudnessMeter.h  LoudnessRange.h  MeterBallistics.h  MidSideProcessor.h  TruePeakMeter.h
modules/bw_dsp_metering/tests/: CMakeLists.txt  alloc_counter_global_operators.cpp  bs1770_conformance_test.cpp  bs1770_meter_test.cpp  meter_ballistics_test.cpp  true_peak_meter_test.cpp
modules/bw_dsp_processors/: CMakeLists.txt
modules/bw_dsp_processors/include/bw_dsp_processors/: ChannelSolo.h  ChannelSwap.h  MonoSum.h  StereoBalancer.h  StereoLevelMeter.h  StereoWidth.h
modules/bw_dsp_processors/tests/: CMakeLists.txt  utility_processors_test.cpp
modules/bw_fft_adapters/: CMakeLists.txt
modules/bw_fft_adapters/include/bw_fft_adapters/: BwsFFT.h
modules/bw_fft_adapters/src/: BwsFFT.cpp
modules/bw_fft_adapters/tests/: CMakeLists.txt  test_fft.cpp
modules/bw_juce_adapters/: CMakeLists.txt
modules/bw_juce_adapters/include/bw_juce_adapters/: BwsAudioProcessor.h  CaptureSystemInfo.h  HostEnvironment.h  JuceBufferAdapter.h  JucePresetFileRepository.h  JucePresetJsonCodec.h  JucePresetStateBridge.h  MakeJuceScheduler.h  PluginBusLayoutPolicy.h  RetainValueTree.h  juce_overrides.h
modules/bw_juce_adapters/src/: BwsAudioProcessor.cpp  CaptureSystemInfo.cpp  HostEnvironment.cpp  JucePresetFileRepository.cpp  JucePresetJsonCodec.cpp  JucePresetStateBridge.cpp  JuceScheduler.cpp  JuceScheduler.h  JuceTransportReader.h  MakeJuceScheduler.cpp  PluginBusLayoutPolicy.cpp  RetainValueTree.cpp  ValueTreeRetainer.h
modules/bw_ports/: CMakeLists.txt
modules/bw_ports/include/bw_ports/: IPlugin.h  IPluginParameter.h  IPresetStatePersistence.h  IScheduler.h  IStateSerializer.h
modules/bw_ports/tests/: CMakeLists.txt  test_preset_state_persistence_contract.cpp
modules/bw_preset_core/: CMakeLists.txt
modules/bw_preset_core/include/bw_preset_core/: IPresetStateBridge.h  PresetCatalog.h  PresetCodec.h  PresetDirtyTracking.h  PresetDiscoveryPolicy.h  PresetFactoryPolicy.h  PresetIdentity.h  PresetLibraryKey.h  PresetLibraryState.h  PresetMetadataPolicy.h  PresetMigration.h  PresetNavigation.h  PresetPathPolicy.h  PresetRecord.h  PresetRepository.h  PresetSession.h  PresetState.h  PresetStorage.h  PresetUuid.h  bw_preset_core.h
modules/bw_preset_core/src/: bw_preset_core_link_anchor.cpp
modules/bw_rt/: CMakeLists.txt
modules/bw_rt/include/bw_rt/: AudioThreadScope.h  CompositionFuzz.h  CrossStageInvariant.h  LockFreeRingBuffer.h  RtAssertions.h  RtGuard.h  RtSafety.h  RtViolationBuffer.h  ScopedFlushDenormals.h  SnapToZero.h
modules/bw_rt/src/: AudioThreadScope.cpp  RtGuard.cpp  RtGuardNoOverrides.cpp  RtGuardOverrides.cpp  RtViolationBuffer.cpp
modules/bw_rt/tests/: CMakeLists.txt  test_composition_fuzz.cpp  test_cross_stage_invariant.cpp  test_lock_free_ring_buffer.cpp  test_rt_containment_observability.cpp  test_rt_guard_alloc.cpp  test_rt_safety_macros.cpp  test_snap_to_zero.cpp
modules/bw_state_types/: CMakeLists.txt
modules/bw_state_types/include/bw_state_types/: BwStateBlob.h  PresetMetadata.h  SystemInfo.h
modules/bw_state_types/tests/: CMakeLists.txt  test_bw_state_blob.cpp
modules/bw_toy_shell/: CMakeLists.txt
modules/bw_toy_shell/include/bw_toy_shell/: HiddenClick.h  HintCard.h  HudUtils.h  TimerPump.h
modules/bw_toy_shell/src/: HiddenClick.cpp  HintCard.cpp  HudUtils.cpp  TimerPump.cpp
modules/bw_ui/: CMakeLists.txt
modules/bw_ui/resources/localization/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  pt-BR.json  qps-ploc.json  zh-CN.json
modules/bw_ui/src/: ScaledImageCache.cpp
modules/bw_ui/src/Components/: UiArcKnob.cpp  UiResizeCorner.cpp
modules/bw_ui/src/Presets/: PresetManager.cpp
modules/bw_ui/src/UI/: FontManifest.cpp  Fonts.cpp  OptimizedMouseHandler.cpp  PaintGuard.cpp  UiBootstrap.cpp  UiTheme.cpp
modules/bw_ui/src/adapters/: UiThemeKernelAdapter.cpp
modules/bw_ui/src/ambient/: AmbientEffects.cpp
modules/bw_ui/src/interaction/: InteractionLogging.cpp  ValueInteraction.cpp
modules/bw_ui/src/interactions/: PhysicsInteractions.cpp  WeatherNumericEntryDialog.cpp
modules/bw_ui/src/kernel/: ReadoutValue.cpp  Theme.cpp
modules/bw_ui/src/localization/: LocalizationHelpers.cpp  (+1 more)
plugins/production/BwsBarometer/: CMakeLists.txt
tests/public_surface/: CMakeLists.txt  bw_audio_types_public_surface_smoke.cpp  bw_core_public_surface_smoke.cpp  bw_dsp_core_public_surface_smoke.cpp  bw_dsp_metering_public_surface_smoke.cpp  bw_dsp_processors_public_surface_smoke.cpp  bw_fft_adapters_public_surface_smoke.cpp  bw_ports_public_surface_smoke.cpp  bw_rt_public_surface_smoke.cpp  bw_state_types_public_surface_smoke.cpp
(+215 files in other folders)
